# cv2jd-tailor

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
claude-code/: CLAUDE.md  tailor.sh
src/cv2jd_tailor/: __init__.py  cli.py  latex_utils.py  mcp_server.py  pipeline.py
src/cv2jd_tailor/llm/: base.py  litellm_backend.py
src/cv2jd_tailor/prompts/: gap_analysis.py  rewrite.py
src/cv2jd_tailor/steps/: fetch_jd.py  gap_analysis.py  read_cv.py  rewrite.py  save_report.py  validate_latex.py
tests/: test_cli.py  test_fetch_jd.py  test_pipeline.py  test_read_cv.py  test_save_report.py  test_validate_latex.py
tests/fixtures/: sample_cv.tex
