[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cv2jd-tailor"
version = "0.1.0"
description = "Tailor your LaTeX CV to any job description — works with any LLM provider"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "litellm>=1.40",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
mcp = ["fastmcp>=2.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
cv2jd-tailor = "cv2jd_tailor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cv2jd_tailor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
